third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/multiple_catch_all.rs
#[derive(Debug, Eq, PartialEq, num_enum::FromPrimitive)]
#[repr(u8)]
enum Enum {
    #[num_enum(catch_all)]
    Zero(u8),
    #[num_enum(catch_all)]
    NonZero(u8),
}

fn main() {}
